@@ -1908,6 +1908,17 @@ Usage    : PRAY "REGROWTH" [TARGET NAME]\n\r\
 Example  : pray "regrowth" bob\n\r\
 This prayers regrows any amputated limbs on the target.
 
+PRAYER_RELEASEPRAYER=PRAYER_RELEASE_PRAYER
+PRAYER_RELEASE_PRAYER=<ABILITY>\
+Usage    : PRAY "RELEASE PRAYER" ([PRAYER NAME])\n\r\
+Example  : pray "release prayer" heal\n\r\
+Example  : pray "release prayer"\n\r\
+This prayer allows the caster to release one or more temporary divine \
+prayers they know without needing to properly cast them.  This \
+might allow those in the room with prayercraft to catch them.  If \
+the caster does not focus on a particular prayer, all temporary \
+prayers are released.
+
 PRAYER_RELIGIOUSDOUBT=PRAYER_RELIGIOUS_DOUBT
 PRAYER_RELIGIOUS_DOUBT=<ABILITY>\
 Usage    : PRAY "RELIGIOUS DOUBT" [TARGET NAME]\n\r\
@@ -2339,6 +2350,20 @@ Usage    : PRAY TONGUES [TARGET NAME]\n\r\
 Example  : pray tongues orc\n\r\
 The target of this spell becomes cursed by the caster's deity, forcing them to speak \
 a random language they may not understand when heard.
+
+PRAYER_TRANSFERBANE=PRAYER_TRANSFER_BANE
+PRAYER_TRANSFER_BANE=<ABILITY>\
+Usage    : PRAY "TRANSFER_BANE" [TARGET NAME]\n\r\
+Example  : pray "transfer bane" bob\n\r\
+The caster attempts to transfer a malicious divine curse they are \
+suffering from to the target.
+
+PRAYER_TRANSFERBOON=PRAYER_TRANSFER_BOON
+PRAYER_TRANSFER_BOON=<ABILITY>\
+Usage    : PRAY "TRANSFER_BOON" [TARGET NAME]\n\r\
+Example  : pray "transfer boon" bob\n\r\
+The caster attempts to transfer a beneficial divine prayer they are \
+affected by to the target.
 
 PRAYER_TREMOR=<ABILITY>\
 Usage    : PRAY TREMOR\n\r\
