@@ -28,7 +28,8 @@
  27. Deities can now be picked at char creation, see DEITYPOLICY in ini file or M.G. control panel
  28. Many GREET style Scriptable triggers now support zapper masks instead of pct chance
  29. Scriptable has new GROUP_GREET_PROG for greetings that trigger at most once per tick.
- 30. New Prayers: Deplete Relic, Attune Relic, Empower Relic
+ 30. New Prayers: Deplete Relic, Attune Relic, Empower Relic, Transfer Bane, Release Prayer, Transfer Boon
+ 31. 
 # Build 5.9.10 Release 6/16/2020
   1. Wands/etc have enchant type as a restriction, WandMaking/StaffMaking/Rodsmithing support.
   2. New PLAYERDEATH option: RETAIN -- to allow player mobs to keep their items on death.
